@@ -32,6 +32,9 @@ Version 1.7.1
        command buttons. (Stefan)
 - BUG: Issue #106: "Search for:" string is
        trimmed forcibly in TortoiseMerge. (Stefan)
+- BUG: Issue #107: Crash when editing
+       externals property. (Stefan)
+
 
 Version 1.7.0
 Too many changes to list here. See the release notes for
